Added the object versions of the primitives to the list.